- Game notation is now visible to players. - Chess board is now correctly displayed on lower screen resolutions.

--- a/angular-front/src/app/components/chess-advantage/chess-advantage.component.sass
+++ b/angular-front/src/app/components/chess-advantage/chess-advantage.component.sass
@@ -7,3 +7,9 @@
   app-chess-figure
     width: 30px
     height: 30px
+
+@media (max-height: 680px)
+  @media (orientation: landscape)
+    .chess-advantage
+      flex-flow: column nowrap
+      padding: 0
